fixed editor room overlap

--- a/client/css/jsonedit.css
+++ b/client/css/jsonedit.css
@@ -24,7 +24,7 @@
   overflow-y: auto;
   height: 100%;
   width: 600px;
-  right: 250px;
+  right: 320px;
   overflow-wrap: break-word;
 }
 
